--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../../bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../../fontawesome/css/all.min.css">
-  <link rel="stylesheet" href="../../../css/general-styles.css?v=<?php echo (rand()); ?>">
-  <link rel="stylesheet" href="../../../css/index.css?v=<?php echo (rand()); ?>">
-  <title>Algoritmos</title>
+  <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./fontawesome/css/all.min.css">
+  <link rel="stylesheet" href="./css/general-styles.css">
+  <link rel="stylesheet" href="./css/index.css">
+  <title>Blog Personal</title>
 </head>
 
 <body>
@@ -16,29 +16,29 @@
   <header>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="../../../index.php">Julio Santaman</a>
+      <a class="navbar-brand" href="./index.html">Julio Santaman</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="../../../index.php">Inicio <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Inicio <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Categorías
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="../../../index.php">Desarrollo Web</a>
-              <a class="dropdown-item" href="./algorithms.php">Algoritmos</a>
+              <a class="dropdown-item" href="./index.html">Desarrollo Web</a>
+              <a class="dropdown-item" href="./pages/categories/algorithms/algorithms.html">Algoritmos</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../contact.php">Contacto</a>
+            <a class="nav-link" href="./pages/contact.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../about-me.php">Acerca de mí</a>
+            <a class="nav-link" href="./pages/about-me.html">Acerca de mí</a>
           </li>
         </ul>
       </div>
@@ -50,16 +50,16 @@
   <main>
     <div class="container my-cards">
       <div class="card mb-3">
-        <h5 class="card-header">Algoritmos</h5>
+        <h5 class="card-header">Desarrollo Web</h5>
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="../../../images/algorithm.png" alt="Algoritmo" title="Algoritmo">
+            <img src="./images/web-page.jpg" alt="¿Qué es una página web dinámica?" title="¿Qué es una página web dinámica?">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">¿Qué es un algoritmo?</h5>
-              <p class="card-text">En matemáticas, lógica, ciencias de la computación y disciplinas relacionadas, un algoritmo ​ es un conjunto de instrucciones o reglas definidas y no-ambiguas, ordenadas y finitas...</p>
-              <a href="./algorithms-info.php" class="btn btn-primary">Leer más</a>
+              <h5 class="card-title">¿Qué es una página web dinámica?</h5>
+              <p class="card-text">En el contexto de Internet, y concretamente referido a la World Wide Web, contenido dinámico es aquel que se genera automáticamente en el momento que alguien solicita su visualización...</p>
+              <a href="./pages/categories/web-development/dinamic-page.html" class="btn btn-primary">Leer más</a>
               <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
           </div>
@@ -67,16 +67,16 @@
       </div>
 
       <div class="card mb-3">
-        <h5 class="card-header">Algoritmos</h5>
+        <h5 class="card-header">Desarrollo Web</h5>
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="../../../images/flowchart" alt="Diagrama de flujo" title="Diagrama de flujo">
+            <img src="./images/php-language-info.jpg" alt="¿Para qué sirve el lenguaje PHP?" title="¿Para qué sirve el lenguaje PHP?">
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">¿Qué es un diagrama de flujo?</h5>
-              <p class="card-text">El diagrama de flujo o flujograma o diagrama de actividades es la representación gráfica de un algoritmo o proceso...</p>
-              <a href="./flowchart.php" class="btn btn-primary">Leer más</a>
+              <h5 class="card-title">¿Para que sirve el lenguaje PHP?</h5>
+              <p class="card-text">PHP es un lenguaje de programación destinado a desarrollar aplicaciones para la web y crear páginas web, favoreciendo la conexión entre los servidores y la interfaz de usuario...</p>
+              <a href="./pages/categories/web-development/php-language-info.html" class="btn btn-primary">Leer más</a>
               <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
             </div>
           </div>
@@ -93,13 +93,13 @@
     <a href="https://www.instagram.com/juliocsantaman/"><i class="fab fa-instagram social-network-icons" title="Instagram"></i></a>
     <a href="https://www.pinterest.com.mx/juliocsantaman/"><i class="fab fa-pinterest social-network-icons" title="Pinterest"></i></a>
     <br>
-    <small>Copyright &copy; 2020 - Hecho por Julio Santaman</small>
+    <small>Copyright &copy; 2021 - Hecho por Julio Santaman</small>
   </footer>
   <!-- END OF FOOTER -->
-  <script src="../../../bootstrap/js/jquery-3.5.1.slim.min.js"></script>
-  <script src="../../../bootstrap/js/popper.min.js"></script>
-  <script src="../../../bootstrap/js/bootstrap.min.js"></script>
-  <script src="../../../js/index.js"></script>
+  <script src="./bootstrap/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="./bootstrap/js/popper.min.js"></script>
+  <script src="./bootstrap/js/bootstrap.min.js"></script>
+  <script src="./js/index.js"></script>
 
 </body>
 
